Final changes stage 3
